...
    const router = useRouter();
    const styles = stylesheet;
    const { theme } = useUnistyles();

    return (
        <Pressable
            testID="start-new-session"
            onPress={() => router.navigate('/new')}
            hitSlop={15}
            style={styles.headerButton}
            accessibilityRole="button"
            accessibilityLabel="Start new session"
        >
...
