...
    };

    return (
        <View style={styles.container}>
            <View style={styles.contentContainer}>
                <FlatList
                    testID="sessions-list"
                    data={dataWithSelected ?? []}
                    renderItem={renderItem}
                    keyExtractor={keyExtractor}
                    contentContainerStyle={{
                        paddingBottom: safeArea.bottom + 128,
                        maxWidth: layout.maxWidth,
...
                            ? styles.sessionItemContainerLast
                            : {},
            ]}
        >
            <GestureDetector gesture={longPressGesture}>
            <Pressable
                testID="session-row"
                style={[
                    styles.sessionItem,
                    selected && styles.sessionItemSelected,
                    isSingle
                        ? styles.sessionItemSingle
                        : isFirst
...
